apps/base/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  labels:
    app: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: node2
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:latest
          ports:
            - containerPort: 9696
          volumeMounts:
            - name: prowlarr-config
              mountPath: /config
      volumes:
        - name: prowlarr-config
          persistentVolumeClaim:
            claimName: prowlarr-config-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
  labels:
    app: flaresolverr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaresolverr
  template:
    metadata:
      labels:
        app: flaresolverr
    spec:
      nodeSelector:
        kubernetes.io/hostname: node2
      containers:
        - name: flaresolverr
          image: ghcr.io/flaresolverr/flaresolverr:latest
          ports:
            - containerPort: 8191
