apps/base/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  type: ClusterIP
  selector:
    app: prowlarr
  ports:
    - port: 9696
      targetPort: 9696
---
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
spec:
  type: ClusterIP
  selector:
    app: flaresolverr
  ports:
    - port: 8191
      targetPort: 8191
